--- a/about.html
+++ b/about.html
@@ -43,12 +43,10 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   <main class="container-md">
     <br>
     <div class="introduction max-seven">
-      <p>My name is David Calabrese. I like to build things. I graduated from Madison College's <a
-          href="https://madisoncollege.edu/academics/programs/web-software-developer">Web Software Development
-          program</a> in May of 2022 with a 4.0 GPA.</p>
+      <p>My name is David Calabrese. I am a full stack developer located in Madison, WI. </p>
 
-      <p>I was born and raised in nearby Milwaukee and attended the University of Wisconsin-Milwaukee. Besides
-        programming, I enjoy playing basketball, spending time in nature and radiating positive energy. </p>
+      <p>I was born and raised in nearby Milwaukee and graduated from the University of Wisconsin-Milwaukee. Besides
+        programming, I enjoy playing basketball, spending time in nature and radiating positive energy.</p>
     </div>
 
 
