--- a/resume.html
+++ b/resume.html
@@ -98,16 +98,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
         <div class="skills-container">
           <ul class="skill-list">
-            <li>Java, Java EE</li>
+            <li>Java, Clojure, Kotlin</li>
             <li>Node.js, Express, React</li>
-            <li>HTML, CSS, JavaScript</li>
             <li>MySQL, Oracle, Postgres</li>
             <li>Python, Flask</li>
-            <li>Git, Github</li>
+            <li>HTML, CSS, JavaScript</li>
             <li>Linux, Shell Scripting</li>
             <li>Cloud & Container</li>
-            <li>PHP</li>
-            <li>Postman, API Development</li>
+            <li>UCaas, VOIP, SIP</li>
           </ul>
         </div>
       </section> <!-- end .skills -->
