--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 <body>
   <header>
     <nav include-html="includes/navigation.html"></nav>
-    <div include-html="includes/banner.html"></div>
+    <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
     <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
   </header>
 
@@ -48,12 +48,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <p>I was born and raised in nearby Milwaukee and graduated from the University of Wisconsin-Milwaukee. Besides
         programming, I enjoy playing basketball, spending time in nature and radiating positive energy.</p>
     </div>
-
-
-    <figure>
-      <img src="img/dave_fiserv2.jpg" alt="David Calabrese at the Fiserv Forum">
-    </figure>
-
 
   </main>
 
