--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
     <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
       <h3 class="mb-3">Thanks for coming to visit!</h3>
-      <p class="lead">This site features a number of my portfolio projects as well as a resume and other contact
-        information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For
-        more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank"
-          rel="noreferrer noopener">GitHub</a>.
-      </p>
+      <div class="introduction max-seven">
+        <p>My name is David Calabrese. I am a full stack developer located in Madison, WI.</p>
+  
+        <p>I was born and raised in nearby Milwaukee and graduated from the University of Wisconsin-Milwaukee. Besides
+          programming, I enjoy playing basketball, spending time in nature and radiating positive energy.</p>
+      </div>
+  
     </div>
   </main>
 
