--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 <body>
   <header>
     <nav include-html="includes/navigation.html"></nav>
-    <div include-html="includes/banner.html"></div>
     <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
   </header>
 
@@ -73,8 +72,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             <h2>ISWAM</h2>
             <p>
               The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current
-              weather data and NWS alerts and sends them to the browser and an IoT device. No live version on GitHub
-              pages.
+              weather data and NWS alerts and sends them to the browser and an IoT device.
             </p>
           </div><!-- .card-content -->
       </article><!-- .card -->
@@ -89,8 +87,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <div class="card-content">
             <h2>Tax Calculator</h2>
             <p>
-              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how
-              much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going.
+              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see a breakdown of where the different taxes are going.
             </p>
           </div><!-- .card-content -->
         </a>
