--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   <body>
     <header>
       <nav include-html="includes/navigation.html"></nav>
-      <div include-html="includes/banner.html"></div>
       <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
     </header>
 
@@ -40,7 +39,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <div class="introduction max-seven">
         <h3>Get in touch!</h3>
         <p>Looking for a skilled web developer to hire? Want to get together for coffee and a chat? Have a great idea to pitch? </p>
-        <p>You can find my contact information on the <a href="https://www.davidcalabrese.org/resume">resume page</a>. You can also submit this form and I'll get back to you ASAP.</p>
+        <p>You can find my contact information on my <a href="resume.html">resume</a>. You can also submit this form and I'll get back to you ASAP.</p>
       </div>
 
         <div class="contact-form">
