--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <div class="card-content">
             <h2>ISWAM</h2>
             <p>
-              The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current
-              weather data and NWS alerts and sends them to the browser and an IoT device.
+              The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that displays currents
+              weather data and NWS alerts in a browser and on an IoT device.
             </p>
           </div><!-- .card-content -->
       </article><!-- .card -->
