--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,11 +54,10 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   
     </div>
   </main>
-
   <footer include-html="includes/footer.html"></footer>
   <script src="js/includeHTML.js"></script>
   <script>includeHTML();</script>
-  <script src="js/script.js"></script>
+  <script src="js/script.js" defer></script>
 </body>
 
 </html>
