--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/contact.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
@@ -58,6 +57,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <footer include-html="includes/footer.html"></footer>
     <script src="js/includeHTML.js"></script>
     <script>includeHTML();</script>
+    <script src="js/script.js"></script>
   </body>
 </html>
 
