--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <div class="introduction max-seven">
         <p>My name is David Calabrese. I am a full stack developer located in Madison, WI.</p>
   
-        <p>I was born and raised in nearby Milwaukee and graduated from the University of Wisconsin-Milwaukee. Besides
-          programming, I enjoy playing basketball, spending time in nature and radiating positive energy.</p>
+        <p>I was born and raised in Milwaukee and graduated from the University of Wisconsin-Milwaukee. When I'm not working,
+          you can find me flailing in a chasm of my child's relentless needs. I also enjoy playing basketball, spending time in nature 
+          and radiating positive energy.</p>
       </div>
   
     </div>
