--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <article class="card">
         <picture class="thumbnail">
-          <img src="img/project_screengrabs/ISWAM.PNG" alt="ISWAM home" id="iswam-img" />
+          <img src="img/project_screengrabs/ISWAM-c.png" alt="ISWAM home" id="iswam-img" />
         </picture>
         <a href="https://github.com/davidtcalabrese/ISWAM">
           <div class="card-content">
@@ -126,7 +126,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <article class="card">
         <a href="https://davidtcalabrese.github.io/sort-game/">
-          <picture class="thumbnail">
+          <picture class="thumbnail" id="city-sort-pic">
             <img class="h-100" src="img/project_screengrabs/city_sort.png" alt="city sort" />
           </picture>
         </a>
