--- a/resume.html
+++ b/resume.html
@@ -121,13 +121,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             <div class="skills-container">
                 <ul class="skill-list">
                     <li>Java, Clojure, Kotlin</li>
-                    <li>Node.js, Express, React</li>
+                    <li>TypeScript, Node, React</li>
                     <li>MySQL, Oracle, Postgres</li>
-                    <li>Python, Flask</li>
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>Linux, Shell Scripting</li>
+                    <li>Linux, Scripting</li>
                     <li>Cloud & Container</li>
-                    <li>UCaas, VOIP, SIP</li>
+                    <li>UCaaS, VOIP, SIP, CTI</li>
                 </ul>
             </div>
         </section> <!-- end .skills -->
