--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <div class="introduction max-seven">
         <h3>Get in touch!</h3>
-        <p>Looking for a skilled web developer to hire? Want to get together for coffee and a chat? Have a great idea to pitch? </p>
-        <p>You can find my contact information on my <a href="resume.html">resume</a>. You can also submit this form and I'll get back to you ASAP.</p>
+        <p>Looking for a developer? Want to play a game of basketball? Just want to chat? Submit the form and I'll get back to you ASAP.</p>
       </div>
 
         <div class="contact-form">
