Reduce reuse recycle

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
   <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
     <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
-      <h3 class="mb-3">Thanks for coming to visit!</h3>
+      <h3 class="mb-3">Thanks for visiting!</h3>
       <div class="introduction max-seven">
         <p>My name is David Calabrese. I am a full stack developer located in Madison, WI.</p>
+
+        <p>I am largely cybersquatting on this domain until a David Calabrese runs for president and offers me a million dollars for it.</p>
   
         <p>I was born and raised in Milwaukee and graduated from the University of Wisconsin-Milwaukee. When I'm not working,
           you can find me flailing in a chasm of my child's relentless needs. I also enjoy playing basketball, spending time in nature 
