--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="alternate icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <title>David Calabrese | Web Developer | For Hire</title>
+    <title>David Calabrese | Software Engineer</title>
   </head>
 
   <body>
