--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   <link rel="alternate icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/index.css" />
-  <title>David Calabrese | Web Developer | For Hire</title>
+  <title>David Calabrese | Software Engineer</title>
 </head>
 
 <body>
@@ -46,15 +46,19 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
       <h3 class="mb-3">Thanks for visiting!</h3>
       <div class="introduction max-seven">
-        <p>My name is David Calabrese. I am a full stack developer located in Madison, WI.</p>
+        <p>My name is David Calabrese. I am a full stack developer located in Madison, WI. I currently work at <a href="https://www.singlewire.com/">Singlewire Software</a></p>
 
-        <p>I am largely cybersquatting on this domain until a David Calabrese runs for president and offers me a million dollars for it.</p>
-  
-        <p>I was born and raised in Milwaukee and graduated from the University of Wisconsin-Milwaukee. When I'm not working,
-          you can find me flailing in a chasm of my child's relentless needs. I also enjoy playing basketball, spending time in nature 
+        <p>I was born and raised in Milwaukee and graduated from the University of Wisconsin-Milwaukee. When I'm not
+          working,
+          you can find me flailing in a chasm of my child's relentless needs. I also enjoy playing basketball, spending
+          time in nature
           and radiating positive energy.</p>
+
+        <p>I am largely cybersquatting on this domain until a David Calabrese runs for president and offers me a million
+          dollars for it.</p>
+
       </div>
-  
+
     </div>
   </main>
   <footer include-html="includes/footer.html"></footer>
