--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
   <link rel="alternate icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/projects.css" />
-  <title>Projects | David Calabrese | Web Developer | For Hire</title>
+  <title>Projects | David Calabrese | Software Engineer</title>
 </head>
 
 <body>
