--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BJCMYXJLBG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-BJCMYXJLBG');
+  </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,7 +54,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
       <h3 class="mb-3">Thanks for visiting!</h3>
       <div class="introduction max-seven">
-        <p>My name is David Calabrese. I am a full stack developer located in Madison, WI. I currently work at <a href="https://www.singlewire.com/">Singlewire Software</a></p>
+        <p>My name is David Calabrese. I am a full stack developer located in Madison, WI. I currently work at <a
+            href="https://www.singlewire.com/">Singlewire Software</a></p>
 
         <p>I was born and raised in Milwaukee and graduated from the University of Wisconsin-Milwaukee. When I'm not
           working,
