--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,15 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BJCMYXJLBG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-BJCMYXJLBG');
+  </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -86,7 +95,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <div class="card-content">
             <h2>Tax Calculator</h2>
             <p>
-              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see a breakdown of where the different taxes are going.
+              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see a
+              breakdown of where the different taxes are going.
             </p>
           </div><!-- .card-content -->
         </a>
