--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
   <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
     <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
-      <h3 class="mb-3">Thanks for visiting!</h3>
+      <h3 class="mb-3">Be realistic. Demand the impossible.</h3>
       <div class="introduction max-seven">
         <p>My name is David Calabrese. I am a full stack developer located in Madison, WI. I currently work at <a
             href="https://www.singlewire.com/">Singlewire Software</a></p>
