Add prha website to projects

--- a/projects.html
+++ b/projects.html
@@ -83,20 +83,37 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               weather data and NWS alerts in a browser and on an IoT device.
             </p>
           </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
+
+      <article class="card" id="prha">
+        <a href="https://www.prhamadison.org/">
+          <picture class="thumbnail">
+            <img class="h-100" src="img/project_screengrabs/prha.png" alt="PRHA Website" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/tax-calculator">
+          <div class="card-content">
+            <h2>PRHA Website</h2>
+            <p>
+              A website I made for my HOA, the Park Ridge Housing Association. Static except for the comment form, which was made with AWS's API Gateway,
+              Lambda and SES.
+            </p>
+          </div><!-- .card-content -->
+        </a>
       </article><!-- .card -->
 
       <article class="card" id="tax">
         <a href="https://davidtcalabrese.github.io/tax-calculator/">
           <picture class="thumbnail">
-            <img class="h-100" src="img/project_screengrabs/tax_calc.jpg" alt="tax calculator" />
+            <img class="h-100" src="img/project_screengrabs/tax_calc.jpg" alt="PRHA Website" />
           </picture>
         </a>
         <a href="https://github.com/davidtcalabrese/tax-calculator">
           <div class="card-content">
             <h2>Tax Calculator</h2>
             <p>
-              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see a
-              breakdown of where the different taxes are going.
+              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see a breakdown of where the different taxes are going.
             </p>
           </div><!-- .card-content -->
         </a>
